--- a/LoginForm/LogIn.html
+++ b/LoginForm/LogIn.html
@@ -93,6 +93,19 @@
                   <input type="checkbox" name="Terms and Condition" />
                   <p>Terms and Condition</p>
                 </label>
+                <div class="role">
+                <label for="browser">Choose your role from the list:</label>
+                <input list="browsers" name="browser" id="browser">
+                <datalist id="browsers">
+                  <option value="Ambasador">
+                  <option value="Donator">
+                  
+                </datalist>
+                <input type="submit" style="border: rgba(0, 0, 255, 0.247);">
+                <div class="checkbox">
+                  
+                </div>
+                </div>
               </div>
               <div class="sign-up-button-row">
                 <button type="submit" onclick="validateForm()">Sign up</button>
