e rregullova errorin e div nmain button

--- a/HTML-Files/News.html
+++ b/HTML-Files/News.html
@@ -37,7 +37,7 @@
 
 
     </head>
-    <body onload="startTimer()">
+    <body>
         <div id="divipare">
             <div id="navbar">
                 <a href="HomePage.html"id="button-form">Home</a>
