major changes edison shkarkoe para se me ba upload diqka okegit add --all

--- a/HTML-Files/HomePage.html
+++ b/HTML-Files/HomePage.html
@@ -40,7 +40,7 @@
 <div id="navbar">
   <a href="HomePage.html"id="button-form">Home</a>
   <a href="News.html" id="button-form1">News</a>
-  <a href="#aboutus" id="button-form1">About   us</a>
+  <a href="Aboutus.html" id="button-form1">About   us</a>
   <a href="contact.html" id="button-form1">Contact</a>
 </div>
 <div id="new-div-title">
@@ -140,9 +140,7 @@ Read More
 </a>
 
 </div>
-<hr>
-<hr>
-<hr>
+
 <div id="smalldiv-footer">
   <h1 id="adres">H.E.E.S</h1>
    
@@ -159,6 +157,9 @@ Read More
     
      
    
+ </div>
+ <div id="div-v">
+
  </div>
 
 
