--- a/HTML-Files/HomePageDivs/HomePage1div2.html
+++ b/HTML-Files/HomePageDivs/HomePage1div2.html
@@ -1,8 +1,8 @@
 <html>
     <head>
         <title>H.E.E.S</title>
-        <link rel="stylesheet" type="text/css" href="..//..//CSS-Files/homepagediv1.css">
-        <link rel="stylesheet" type="text/css" href="..//..//CSS-Files/Homepage.css">
+        <link rel="stylesheet" type="text/css" href="../../CSS-Files/homepagediv1.css">
+        <link rel="stylesheet" type="text/css" href="../../CSS-Files/Homepage.css">
         <!-- <script type="text/javascript" src="Homepage.js"></script> -->
 
 
@@ -13,12 +13,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">   
 </head>
     <body>
-        <body >
+        <body>
             
             <div id="navbar">
               <a href="../HomePage.html"id="button-form">Home</a>
               <a href="../News.html" id="button-form1">News</a>
-              <a href="#aboutus" id="button-form1">About   us</a>
+              <a href="../aboutus" id="button-form1">About   us</a>
               <a href="../contact.html" id="button-form1">Contact</a>
             </div>
     <div>
