--- a/HTML-Files/HomePageDivs/Homepage1div4.html
+++ b/HTML-Files/HomePageDivs/Homepage1div4.html
@@ -1,8 +1,8 @@
 <html>
     <head>
         <title>H.E.E.S</title>
-        <link rel="stylesheet" type="text/css" href="..//..//CSS-Files/homepagediv3.css">
-        <link rel="stylesheet" type="text/css" href="..//..//CSS-Files/Homepage.css">
+        <link rel="stylesheet" type="text/css" href="../../CSS-Files/homepagediv3.css">
+        <link rel="stylesheet" type="text/css" href="../../CSS-Files/Homepage.css">
         <!-- <script type="text/javascript" src="Homepage.js"></script> -->
 
 
@@ -18,7 +18,7 @@
             <div id="navbar">
                 <a href="../HomePage.html"id="button-form">Home</a>
                 <a href="../News.html" id="button-form1">News</a>
-                <a href="#aboutus" id="button-form1">About   us</a>
+                <a href="../Aboutus.html" id="button-form1">About   us</a>
                 <a href="../contact.html" id="button-form1">Contact</a>
             </div>
     <div>
