--- a/HTML-Files/Main-Home.html
+++ b/HTML-Files/Main-Home.html
@@ -16,10 +16,10 @@
         <body >
             
             <div id="navbar">
-                <a href=".//HomePage.html"id="button-form">Home</a>
-                <a href=".//News.html" id="button-form1">News</a>
-                <a href="#aboutus" id="button-form1">About   us</a>
-                <a href=".//contact.html" id="button-form1">Contact</a>
+                <a href="../HTML-Files/HomePage.html"id="button-form">Home</a>
+                <a href="../HTML-Files/News.html" id="button-form1">News</a>
+                <a href="../HTML-Files/Aboutus.html" id="button-form1">About   us</a>
+                <a href="../HTML-Files/contact.html" id="button-form1">Contact</a>
             </div>
     <div>
         <div id="header">
