--- a/HTML-Files/News.html
+++ b/HTML-Files/News.html
@@ -42,7 +42,7 @@
             <div id="navbar">
                 <a href="HomePage.html"id="button-form">Home</a>
                 <a href="News.html" id="button-form1">News</a>
-                <a href="#aboutus" id="button-form1">About   us</a>
+                <a href="Aboutus.html" id="button-form1">About   us</a>
                 <a href="contact.html" id="button-form1">Contact</a>
               </div>
         </div>
