--- a/HTML-Files/contact.html
+++ b/HTML-Files/contact.html
@@ -22,7 +22,7 @@
     <div id="navbar">
         <a href="HomePage.html"id="button-form">Home</a>
         <a href="News.html" id="button-form1">News</a>
-        <a href="#aboutus" id="button-form1">About us</a>
+        <a href="Aboutus.html" id="button-form1">About us</a>
         <a href="contact.html" id="button-form1">Contact </a>
       </div>
 
@@ -135,11 +135,11 @@
                 <div id="error_message"></div>
     <form id="form" onsubmit="return validation()" >
   
-      <h3 id="name1">Name:</h3><input type="text" placeholder="name" class="si" id="name12">
-    <h3 id="surname1">
-    Surname:</h3><input type="text" placeholder="surname "class="si" id="surname">
-    <h3 id="email1">Email:</h3><input type="text" placeholder="Email" class="si" id="email">
-    <h3 id="subject1">Subject:</h3> <input type="text" placeholder="Subject" class="si" id="subject">
+      <h3 id="name1">Name:</h3><input type="text" placeholder="name" class="si" id="name12" aria-required="true" required>
+    <h3 id="surname1" >
+    Surname:</h3><input type="text" placeholder="surname "class="si" id="surname" aria-required="true" required>
+    <h3 id="email1">Email:</h3><input type="text" placeholder="Email" class="si" id="email"aria-required="true" required>
+    <h3 id="subject1">Subject:</h3> <input type="text" placeholder="Subject" class="si" id="subject"aria-required="true" required>
     
                 <div>
                 <h3 id="text23">Your Comment:</h3><textarea rows="15" cols="70" form="form" id="textareas"></textarea>
