--- a/HTML-Files/HomePage.html
+++ b/HTML-Files/HomePage.html
@@ -52,11 +52,11 @@
   <h3 id="second-title">
     Humanity experience Ephiphany on a day of Euphoria <br >with Singularity
   </h3>
-  <button id="button-more"onclick="window.location.href='./Main-home.html'">
+  <button id="button-more"onclick="window.location.href='../Main-home.html'">
     More
   </button>
 
-  <button id="button-log-in" onclick="window.location.href='./LoginForm/LogIn.html'"> 
+  <button id="button-log-in" onclick="window.location.href='../LoginForm/LogIn.html'"> 
     Sign 
   </button>
 </div>
