--- a/HTML-Files/Main-Home.html
+++ b/HTML-Files/Main-Home.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>H.E.E.S</title>
-        <link rel="stylesheet" type="text/css" href="C:\xampp\htdocs\HEES\CSS-Files\main-home.css">
+        <link rel="stylesheet" type="text/css" href="../CSS-Files/main-home.css">
         <link rel="stylesheet" type="text/css" href="..//CSS-Files/Homepage.css">
         <!-- <script type="text/javascript" src="Homepage.js"></script> -->
 
