register admin user login

--- a/HTML-Files/HomePage.html
+++ b/HTML-Files/HomePage.html
@@ -52,10 +52,10 @@
   <h3 id="second-title">
     Humanity experience Ephiphany on a day of Euphoria <br >with Singularity
   </h3>
-  <button id="button-more"onclick="window.location.href='../HTML-Files/Main-Home.html'">
+  <button id="button-more" onclick="window.location.href='../HTML-Files/Main-Home.html'">
     More
   </button>
-  <button id="button-log-in" onclick="window.location.href='../LoginForm/LogIn.html'"> 
+  <button id="button-log-in" onclick="window.location.href='../LoginForm/LogIn.php'"> 
     Sign 
   </button>
 </div>
