overall changes - refactor

--- a/HTML-Files/Aboutus.html
+++ b/HTML-Files/Aboutus.html
@@ -43,10 +43,10 @@
 <body >
 <div class="parallax1">
 <div id="navbar">
-  <a href="HomePage.html"id="button-form">Home</a>
-  <a href="News.html" id="button-form1">News</a>
+  <a href="HomePage.php"id="button-form">Home</a>
+  <a href="News.php" id="button-form1">News</a>
   <a href="Aboutus.html" id="button-form1">About   us</a>
-  <a href="contact.html" id="button-form1">Contact</a>
+  <a href="contact.php" id="button-form1">Contact</a>
 </div>
 </div>
 <div style="float: left;display: inline;width: 100%;height: 10%;background-color: black;">
