--- a/HTML-Files/HomePageDivs/Main-Home.html
+++ b/HTML-Files/HomePageDivs/Main-Home.html
@@ -16,10 +16,10 @@
         <body >
             
             <div id="navbar">
-                <a href="../HomePage.html"id="button-form">Home</a>
-                <a href="../News.html" id="button-form1">News</a>
+                <a href="../HomePage.php"id="button-form">Home</a>
+                <a href="../News.php" id="button-form1">News</a>
                 <a href="../Aboutus.html" id="button-form1">About   us</a>
-                <a href="../contact.html" id="button-form1">Contact</a>
+                <a href="../contact.php" id="button-form1">Contact</a>
             </div>
     <div>
         <div id="header">
