--- a/HTML-Files/HomePageDivs/Homepagediv3.html
+++ b/HTML-Files/HomePageDivs/Homepagediv3.html
@@ -18,7 +18,7 @@
             <div id="navbar">
                 <a href="../HomePage.php"id="button-form">Home</a>
                 <a href="../News.php" id="button-form1">News</a>
-                <a href="../Aboutus.html" id="button-form1">About   us</a>
+                <a href="../Aboutus.php" id="button-form1">About   us</a>
                 <a href="../contact.php" id="button-form1">Contact</a>
             </div>
     <div>
